<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_quit"
        android:title="@string/action_quit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_previous"
        android:icon="@drawable/ic_arrow_left"
        android:title="@string/action_previous"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_arrow_right"
        android:title="@string/action_next"
        app:showAsAction="always" />

</menu>
