<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amsu.vitaliy.finalproject_vitalyi_rudoy.LanaDelReyActivity">

    <ImageView
        android:id="@+id/imageViewNirvana"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/nirvana" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.6"
        android:background="#484545"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_nirvana_song"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/smells_like_teen_sprit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/duration_spirit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:text="@string/smells_like_teen_sprit_duration"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

    </LinearLayout>


    <TextView
        android:id="@+id/spirit_description"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/smells_like_teen_spri_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />
</LinearLayout>
